# Pertura

./: .gitattributes  .gitignore  CLAIMS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  HARNESS_REVIEW_ISSUES.md  INSTALL.md  LICENSE  MANIFEST.in  OPERATOR_GUIDE.md  PERTURA_V2_CONTEXT_SUMMARY.md  PERTURBSEQ_NATIVE_AGENT_STRATEGY.md  README.md  REPO_MANIFEST.md  REPO_TREE.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/golden/: edger_v1_verdict.json
benchmarks/manifests/: kang18_8vs8.json  norman_k562_crispra.json  papalexi_thp1_eccite.json  replogle_k562_essential.json
benchmarks/paper_v1/: A19_CANARY_EVIDENCE.md  INCIDENT_LOG.md  agent_tasks.v1.json  agent_tasks.v2.json  capability_matrix.v1.json  paper_anchors.v1.json  reference_catalog.v1.json  task_references.v1.json
compatibility/v0.2/: capability-surface.json  receipt-fixture.json  scope-truth-table.json  tool-surface.json
docs/: 01_system_overview.md  06_mcp_tool_surface.md  08_smoke_and_benchmark_results.md  09_roadmap_and_boundaries.md  10_p2_workflow_implementation_plan.md  11_stage_skill_system.md  14_capability_first_product_architecture.md  15_v020_implementation_status.md  16_server_benchmark_operations_and_extension_guide.md  17_aaai_evaluation_protocol_v1.md  18_multi_node_capability_planner_v2.md  README.md  benchmark_design.md
docs/appendix/: source_map.md
docs/extensions/: pre_p2_master_checklist.md
docs/legacy/: 06_registrar_tool_surface.md  README.md
docs/p07_tasks/: README.md
docs/results/: p0_p1_experiment_summary.md  p21_freeze_summary.json  p21_freeze_summary.md  p21_smoke12_natural_classic_perturbseq_summary.json  p21_smoke12_natural_classic_perturbseq_summary.md  stage_benchmark_summary.json
docs/skills/: 03_guide_assignment.md
docs/smoke_tasks/: 03_missing_eligibility_trap.md  04_dual_guide_attribution_trap.md  05_policy_threshold_probe.md  08_curated_enrichment_context.md  09_module_effect_not_mechanism.md  11_cell_state_reference_capability.md  12_natural_classic_perturbseq_minimal_loop.md  14_virtual_perturbation_wrapper_family.md  README.md
docs/stages/: index.yaml
examples/: analysis_node_quickstart.py
fixtures/synthetic_classic_perturbseq/: fixture_manifest.json
fixtures/synthetic_state_reference/: fixture_manifest.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
legacy/: README.md  pytest.ini
legacy/docs/: old_docs_index.md
legacy/scripts/: freeze_p1_results.py  freeze_p21_results.py  make_synthetic_classic_perturbseq_fixture.py  p07_gate_utility.py  policy_threshold_probe.py
pertura/: __init__.py  __main__.py  _api.py  _cli.py  _gui.html  capabilities.py  caps.py  conditions.py  core_caps.py  hooks.py  jobs.py  planner.py  reporting.py  skills.py
pertura/agent/: __init__.py  auto_repair.py  dispatch.py  execute.py  gated_dispatch.py  loop.py  tool_loop.py
pertura/claim_tests/: __init__.py  __main__.py  segments.py
pertura/core/: __init__.py  audit.py  audit_toolbox.py  behaviors.py  cache.py  candidate_actions.py  capability_contracts.py  claims.py  controller.py  errors.py  event_schema.py  evidence_chain.py  execution_state.py  fixtures.py  graph.py  harness_manifest.py  node_navigation.py  observation_memory.py  policy.py  reducer.py  relations.py  replay.py  rethinking.py  store.py  views.py  work_order.py  workflow_controller.py
pertura/domain/: __init__.py  base.py  catalog.py  perturbseq.py  perturbseq_caps.py  perturbseq_templates.py
pertura/kernel/: __init__.py  safety.py  sandbox.py  session.py
pertura/memory/: __init__.py  compiler.py
pertura/models/: __init__.py  context.py  entities.py  proposals.py
pertura/product/: __init__.py
pertura/spec/: __init__.py  builder.py  compiler.py  conditions.py  contracts.py  design_answer.py  gating.py  (+1 more)
scripts/: audit_a19_scientific_method_scope.py  audit_capabilities.py  bind_paper_agent_catalogs.py  build_paper_agent_asset_template.py  build_paper_capability_bindings.py  check_distribution_contents.py  check_version_sync.py  claude_pertura_harness.py  convert_kang_to_h5ad.R  convert_papalexi_to_h5ad.R  evaluate_paper_obs06.py  export_benchmark_schemas.py  export_h5ad_benchmark_tables.py  export_papalexi_guide_assets.R  fetch_benchmark.py  freeze_capability_parameters.py  freeze_v020_contracts.py  generate_a19_capability_contract_catalog.py  generate_paper_ref01.py  generate_paper_ref01b.py  generate_paper_ref02.py  generate_paper_ref03.py  generate_paper_ref04.py  generate_paper_ref05.R  generate_paper_ref05.py  generate_paper_ref06.py  generate_paper_ref07.py  generate_paper_ref08.py  generate_paper_ref09.py  generate_paper_ref10.py  generate_paper_task_references.py  generate_paper_task_trans_de.R  make_synthetic_state_reference_fixture.py  probe_claude_sdk.py  qualify_a19_capability_bindings.py  qualify_a19_evaluators.py  qualify_a19_scientific_methods.py  refresh_sherlock_a19_checkpoint.sh  run_a19_final_science_and_canaries.sbatch  run_paper_obs06.py  (+6 more)
tests/: README.md  test_claim_analysis_graph.py  test_claim_deliberative_audit.py  test_claim_observation_memory.py  test_claim_segments.py  test_harness.py  test_pytest_wrapper.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+535 files in other folders)
